# leechowl

./: README.md  pyproject.toml
src/leechowl/: __init__.py  cli.py  constants.py  core.py
src/leechowl/downloaders/: __init__.py  base.py  direct.py  media.py  torrent.py
src/leechowl/utils/: __init__.py  classify.py
